# pgcl-compiler

./: Cargo.toml
src/: import_resolver.rs  lib.rs  position.rs
src/analizer/: mod.rs
src/common/: range.rs
src/error/: mod.rs
src/interop/javascript/: analize.rs  log.rs  mod.rs  tokenize.rs
src/lexer/: mod.rs  token.rs  tokenize.rs
src/lexer/definitions/: block_comment.rs  catch_all.rs  catch_all_until_whitespace.rs  exact_match.rs  identifier.rs  invalid_char.rs  line_comment.rs  match_any.rs  mod.rs  number.rs  token_def.rs
src/lexer/types/: address_spaces.rs  brackets.rs  comments.rs  definitions.rs  ignored.rs  keywords.rs  mod.rs  operators.rs  token_type.rs  whitespace.rs
src/parser/: brackets.rs  document.rs  grammar.rs  macros.rs  match_brackets.rs  mod.rs  parse.rs  program_tree.rs  reference.rs  tree.rs  tree_nodes.rs  uniform.rs
src/parser/grammars/: block.rs  document.rs  function_arg.rs  function_call_arg.rs  function_declaration.rs  mod.rs  uniform_declaration.rs  var_declaration.rs
src/parser/nodes/: block.rs  comma_separator.rs  document.rs  function_arg.rs  function_args.rs  function_call_arg.rs  function_call_args.rs  function_declaration.rs  mod.rs  tagged_string.rs  typ.rs  uniform_declaration.rs  var_declaration.rs
src/parser/parsers/: block.rs  block_content.rs  document.rs  function_arg.rs  function_args.rs  function_call_arg.rs  function_call_args.rs  function_declaration.rs  mod.rs  uniform_declaration.rs  var_declaration.rs
src/parser/program_tree/: function_declaration.rs  mod.rs  native_const.rs  (+6 more)
src/tokens/: tokenize.rs
(+44 files in other folders)
