[package]
name = "paralang"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
regex = "1.10.2"
enum_all_variants = "0.1.0"
serde = "^1.0.101"
serde_derive = "^1.0.101"